--- a/eclipse-scout-core/src/desktop/navigation/DesktopNavigationHandle.less
+++ b/eclipse-scout-core/src/desktop/navigation/DesktopNavigationHandle.less
@@ -18,8 +18,8 @@
 
   & > .collapse-handle-body {
     background-color: @desktop-navigation-handle-background-color;
-    border-color: fade(@desktop-navigation-handle-border-color, 75%);
-    color: fade(@desktop-navigation-handle-color, 75%);
+    border-color: @desktop-navigation-handle-border-color;
+    color: @desktop-navigation-handle-color;
   }
 
   &.navigation-closed > .collapse-handle-body {
