--- a/eclipse-scout-core/src/desktop/toolbox/DesktopToolBox.less
+++ b/eclipse-scout-core/src/desktop/toolbox/DesktopToolBox.less
@@ -26,6 +26,7 @@
   border-right: 1px solid transparent;
   margin-left: 20px;
   margin-right: 20px;
+  color: @desktop-tool-box-item-color;
 
   &.last {
     margin-right: 0;
@@ -45,7 +46,7 @@
   }
 
   & > .font-icon {
-    font-size: 17px;
+    font-size: @desktop-tool-box-item-font-size;
   }
 
   & > .icon.image-icon {
