--- a/eclipse-scout-core/src/form/fields/groupbox/GroupBox.less
+++ b/eclipse-scout-core/src/form/fields/groupbox/GroupBox.less
@@ -107,6 +107,7 @@
   & > .label {
     display: inline-block;
     vertical-align: middle;
+    font-size: @title-font-size;
     font-weight: bold;
     color: @title-color;
     #scout.overflow-ellipsis();
@@ -115,7 +116,7 @@
 
   & > .sub-label {
     font-size: @font-size-extra-small;
-    color: @text-disabled-color;
+    color: @group-box-title-sub-label-color;
     padding-top: 3px;
   }
 
