--- a/eclipse-scout-core/src/menu/Menu.less
+++ b/eclipse-scout-core/src/menu/Menu.less
@@ -13,7 +13,7 @@
   display: inline-block;
   vertical-align: middle;
   white-space: nowrap;
-  color: @text-color;
+  color: @menu-item-color;
   cursor: pointer;
   #scout.vertical-align-helper-before();
 
