--- a/eclipse-scout-core/src/form/fields/FormField.less
+++ b/eclipse-scout-core/src/form/fields/FormField.less
@@ -21,6 +21,8 @@
     margin-left: @mandatory-indicator-width;
     /* Add small spacing between label and field */
     padding-right: @mandatory-indicator-width;
+    color: @label-color;
+    font-size: @field-label-font-size;
 
     &.empty {
       /* explicitly disable ellipsis, because IE would display it for very narrow columns even if content is '&nbsp;' */
