--- a/eclipse-scout-core/src/table/Table.less
+++ b/eclipse-scout-core/src/table/Table.less
@@ -131,6 +131,7 @@
   position: relative;
   overflow: hidden;
   width: 100%;
+  #scout.inset-shadow-bottom;
 
   /* Draw the .table-data DIV one pixel higher, over the header (for selection border). */
   /* - To make height calculation correct, this margin has to be subtracted again */
