--- a/eclipse-scout-core/src/table/TableFooter.less
+++ b/eclipse-scout-core/src/table/TableFooter.less
@@ -125,18 +125,17 @@
 .table-info {
   position: absolute;
   right: 0;
+  display: inline-flex;
+  align-items: center;
+  height: 100%;
 }
 
 .table-filter {
-  display: inline-block;
-  position: relative;
-  vertical-align: top;
-  margin-top: (@table-footer-height - 26px) / 2;
   margin-right: @table-control-padding;
 }
 
 .table-text-filter {
-  min-height: 26px;
+  min-height: @table-footer-text-filter-height;
   width: 200px;
   font-size: 13px;
 
@@ -173,29 +172,17 @@
 .table-info-status,
 .table-info-filter,
 .table-info-selection {
-  position: relative;
-  display: inline-block;
-  vertical-align: top;
-  padding-top: @table-control-padding / 2;
-  padding-bottom: 0;
-  height: @table-footer-height - 1px; /* subtract border-top of .table-footer */
+  flex-shrink: 0;
+  flex-grow: 0;
   color: @table-info-color;
   cursor: pointer;
   line-height: 19px;
   #scout.overflow-nowrap();
 
-  &::before {
-    content: '';
-    position: absolute;
-    top: @table-control-padding / 2  + 2px;
-    left: 0;
-    height: @table-footer-height - @table-control-padding - 4px;
-    border-right: 1px solid @border-color;
-  }
-
   /* margins are used instead of paddings for a better animation */
 
   & > span {
+    display: block;
     margin-left: @table-control-padding;
     margin-right: @table-control-padding - 1px; /* because left padding includes the ::before border */
   }
