Brushup POC blue header

--- a/eclipse-scout-core/src/desktop/Desktop.less
+++ b/eclipse-scout-core/src/desktop/Desktop.less
@@ -15,6 +15,11 @@
   bottom: 0;
   right: 0;
 
+  &.in-background {
+    border-right: 0;
+    background-color: @desktop-navigation-in-background-background-color;
+  }
+
   &:focus {
     outline: none;
   }
