--- a/eclipse-scout-core/src/desktop/outline/Outline.less
+++ b/eclipse-scout-core/src/desktop/outline/Outline.less
@@ -109,6 +109,7 @@
 
 .outline-title {
   cursor: pointer;
+  color: @outline-title-color;
   #scout.font-text-large();
   #scout.overflow-ellipsis-nowrap();
   margin: 0 @outline-title-margin-right @outline-title-margin-bottom @outline-title-margin-left;
