--- a/eclipse-scout-core/src/desktop/toolbox/DesktopToolBox.less
+++ b/eclipse-scout-core/src/desktop/toolbox/DesktopToolBox.less
@@ -57,6 +57,19 @@
   &.menu-textandicon > .icon {
     padding-right: @header-menu-textandicon-padding-right;
   }
+
+  &:hover {
+    background-color: @desktop-tool-box-item-hover-background-color;
+    color: @desktop-tool-box-item-hover-color;
+  }
+
+  &.popup-head {
+    color: @active-color;
+
+    &:hover {
+      background-color: @popup-background-color;
+    }
+  }
 }
 
 /* header: tools popup */
