--- a/eclipse-scout-core/src/desktop/viewbutton/ViewButtonBox.less
+++ b/eclipse-scout-core/src/desktop/viewbutton/ViewButtonBox.less
@@ -9,12 +9,12 @@
  *     BSI Business Systems Integration AG - initial API and implementation
  */
 .view-button-box {
-  display: inline-block;
-  vertical-align: top;
+  display: flex;
   min-height: @view-button-box-height;
   white-space: nowrap;
   #scout.font-text-large();
   overflow: hidden;
   position: relative; /* if covered by glass pane */
   padding: @view-button-box-padding-top @view-button-box-padding-right @view-button-box-padding-bottom @view-button-box-padding-left;
+  background-color: @view-button-box-background-color;
 }
