--- a/eclipse-scout-core/src/desktop/header/DesktopHeader.less
+++ b/eclipse-scout-core/src/desktop/header/DesktopHeader.less
@@ -37,13 +37,10 @@
 
       &::before {
         .desktop-bench-drop-shadow();
+        clip-path: none;
         top: 0;
         width: 20px;
         height: 110%;
-      }
-
-      &:not(:first-child)::before {
-        box-shadow: -7px 0 10px 0 rgba(0, 0, 0, 0.4);
       }
     }
   }
