--- a/eclipse-scout-core/src/style/colors.less
+++ b/eclipse-scout-core/src/style/colors.less
@@ -44,10 +44,10 @@
 
 @palette-gray-0: #FEFEFE;
 @palette-gray-1: #FAFAFA;
-@palette-gray-2: #F6F6F6;
+@palette-gray-2: #F7F7F7;
 @palette-gray-3: #F1F1F1;
 @palette-gray-4: #DDDDDD;
-@palette-gray-5: #CCCCCC;
+@palette-gray-5: #E3E3E3;;
 @palette-gray-6: #999999;
 @palette-gray-6-1: #888888;
 @palette-gray-7: #666666;
@@ -104,7 +104,7 @@
 @focus-glow-color-inverted: fade(@active-inverted-color, 50%);
 @highlight-color: @palette-orange-4;
 @highlight-inverted-background-color: @highlight-color;
-@hover-color: @palette-blue-6;
+@hover-color: inherit;
 @icon-color: @text-color;
 @icon-disabled-color: @palette-gray-5;
 @icon-inverted-color: @palette-white;
@@ -132,6 +132,7 @@
 @text-field-icon-focus-color: @focus-border-color;
 @text-field-placeholder-color: @palette-gray-6;
 @title-color: @palette-gray-10;
+@sub-title-color: @palette-gray-9;
 
 /* -------------------------------- */
 /* Component specific colors        */
@@ -216,6 +217,7 @@
 @desktop-navigation-handle-background-color: @navigation-background-color;
 @desktop-navigation-handle-border-color: @border-color;
 @desktop-navigation-handle-color: @navigation-color;
+@desktop-navigation-in-background-background-color: @palette-gray-2;
 @desktop-notification-background-color: @palette-white;
 @desktop-notification-ok-border-color: @palette-green-3;
 @desktop-notification-info-border-color: @palette-blue-4;
@@ -223,7 +225,15 @@
 @desktop-notification-error-border-color: @palette-red-3;
 @desktop-header-background-color: @palette-white;
 @desktop-header-border-color: @border-color;
+@desktop-tab-color: @title-color;
+@desktop-tab-sub-title-color: @sub-title-color;
+@desktop-tab-sub-title-active-color: @desktop-tab-sub-title-color;
+@desktop-tab-hover-background-color: @view-button-tab-hover-background-color;
 @desktop-tool-box-item-color: inherit;
+@desktop-tool-box-item-hover-background-color: @view-button-tab-hover-background-color;
+@desktop-tool-box-item-hover-color: @desktop-tool-box-item-color;
+// TODO CGU create hover-inverted-background-color etc. for header elements, maybe remove all the variables and use this generic names for all header elements
+//  -> or maybe define color in header and always use inherit. can we easily allow for two styles (navigation colored, header colored)?
 @desktop-toolbox-in-navigation-background-color: @palette-white; // TODO CGU rename toolbox -> tool-box
 @detail-table-header-background-color: @table-header-background-color;
 @detail-table-header-border-color: @table-header-border-color;
@@ -233,7 +243,7 @@
 @form-menu-popup-main-menubar-background-color: @menubar-background-color;
 @label-color: @palette-gray-9;
 @group-box-title-border-color: @border-color;
-@group-box-title-sub-label-color: @palette-gray-9;
+@group-box-title-sub-label-color: @sub-title-color;
 @header-view-button-tab-active-background-color: @simple-tab-active-background-color;
 @header-view-button-tab-active-color: @simple-tab-active-color;
 @header-view-button-tab-background-color: @navigation-background-color;
@@ -290,6 +300,7 @@
 @outline-selection-color: @palette-white;
 @outline-scrollbar-thumb-color: @scrollbar-thumb-inverted-color;
 @outline-scrollbar-thumb-hover-color: @scrollbar-thumb-inverted-hover-color;
+@outline-title-color: inherit;
 @outline-title-border-color: transparent;
 @planner-large-scale-item-line-color: fade(@palette-black, 20%);
 @planner-small-scale-item-line-color: fade(@palette-black, 7%);
@@ -468,15 +479,21 @@
 @top-label-color: @palette-gray-6-1;
 @tree-node-active-background-color: @item-active-background-color;
 @tree-node-control-color: inherit;
+@view-button-box-background-color: transparent;
 @view-button-tab-active-background-color: @active-inverted-background-color;
-@view-button-tab-active-color: @active-inverted-color; // TODO CGU rename active -> selected
+@view-button-tab-active-color: @active-inverted-color; // TODO CGU rename active -> selected (all variables)
 @view-button-tab-background-color: transparent;
+@view-button-tab-hover-background-color: fade(@palette-white, 20%);
 @view-menu-color: @view-button-tab-color;
 @view-menu-background-color: @view-button-tab-background-color;
+@view-menu-tab-color: inherit;
+@view-menu-tab-selected-color: inherit;
 @view-button-tab-color: @palette-gray-8;
 @view-menu-popup-background-color: @popup-background-color;
+@simple-tab-color: @title-color;
+@simple-tab-sub-title-color: @sub-title-color;
 @simple-tab-active-background-color: @form-background-color;
-@simple-tab-active-color: @title-color; // TODO CGU rename selected
+@simple-tab-active-color: @title-color;
 @simple-tab-selection-marker-color: @active-color;
 @simple-tab-background-color: @panel-background-color;
 @simple-tab-flash-background-color: @palette-gray-5;
